<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">环信UI演示</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>

    <!-- 以上为环信所使用string资源 -->
    <!-- i、自行添加string资源放在下面，分块注释说明使用界面 -->
    <string name="confirm">确认</string>
    <string name="cancle">取消</string>

    <!-- 登陆注册 -->

    <string name="login">登录</string>
    <string name="forgetpsw">忘记密码</string>
    <string name="register">注册</string>
    <string name="usernamehint">请输入账号</string>
    <string name="passwordhint">请输入密码</string>
    <string name="qqlogin">QQ登录</string>
    <string name="wechatlogin">微信登录</string>
    <string name="weibologin">微博登录</string>
    <string name="username">登录名</string>
    <string name="setpassword">设置密码</string>
    <string name="passwordagain">再次输入密码</string>
    <string name="next">下一步</string>
    <string name="readandagree">我已阅读并同意</string>
    <string name="userinfomation">《用户须知》</string>
    <string name="phonepls">请输入手机号码</string>
    <string name="verifycode">验证码</string>
    <string name="perfectinfomation">完善资料</string>
    <string name="clickupimg">点击上传图片</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="bornplace">出生地</string>
    <string name="province">省份</string>
    <string name="city">市</string>
    <string name="county">县</string>
    <string name="takepic">拍照</string>
    <string name="pickpic">选择图片</string>

    <!-- findfragment -->
    <string name="nearuser">附近的老乡</string>
    <string name="neargroup">附近的老乡群</string>
    <string name="find">发现</string>

    <!-- service fragment -->
    <string name="service">生活服务</string>
    <string name="featurefood">家乡菜</string>
    <string name="getfriends">男女交友</string>
    <string name="fellowparty">老乡聚会</string>
    <string name="dialectplay">方言娱乐</string>
    <string name="hotnews">热门活动</string>

    <!-- 家乡菜概要界面 -->
    <string name="featurefoodtitle">家乡特产|家乡菜</string>
    <string name="placefeaturefood">陕西安康的家乡菜</string>
    <string name="featureintro">安康特产介绍</string>
    <string name="nearfeature">附近的特产|家乡菜</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>