<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_perfectinformation_ll_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray_light"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_orange" >

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:onClick="back"
            android:padding="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/left_arrow_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/perfectinfomation"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="30dp" >

        <ImageView
            android:id="@+id/activity_perfectinfomation_img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickupimg"
            android:textColor="@color/black_deep" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/border_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nickname"
            android:textColor="@color/black_deep" />

        <EditText
            android:id="@+id/activity_perfectinfomation_et_nickname"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:background="@drawable/bg_transparent_circleborder_orange"
            android:paddingLeft="5dp"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sex"
            android:textColor="@color/black_deep" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/activity_perfectinfomation_ckb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/black_deep" />

            <CheckBox
                android:id="@+id/activity_perfectinfomation_ckb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/black_deep" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bornplace"
            android:textColor="@color/black_deep" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="4"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_transparent_circleborder_orange"
                android:onClick="selectPro"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/activity_perfectinfomation_tv_province"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/province"
                    android:textColor="#000000" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_transparent_circleborder_orange"
                android:onClick="selectCity"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/activity_perfectinfomation_tv_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/city"
                    android:textColor="#000000" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_transparent_circleborder_orange"
                android:onClick="selectCounty"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/activity_perfectinfomation_tv_county"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/county"
                    android:textColor="#000000" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_gray" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_orange_press_shape"
        android:onClick="register"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/confirm" />

</LinearLayout>