<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/bg_orange"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/service"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:baselineAligned="false" 
        android:paddingTop="5dp" >

        <LinearLayout
            android:id="@+id/fragment_service_ll_featurefood"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/featurefood" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/featurefood" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_service_ll_getfriends"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/getfriends" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getfriends" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_service_ll_fellowparty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/fellowparty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fellowparty" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_service_ll_dialectplay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/dialectplay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialectplay" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="25dp"
        android:paddingTop="25dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/hotnews" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotnews" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_gray" />

    <ListView
        android:id="@+id/fragment_service_lst_hotnews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/border_gray"
        android:dividerHeight="1dp" >
    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_gray" />

</LinearLayout>