<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bottom_pic_popmenu_ll_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bottom_pic_popmenu_tv_takephoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="3"
            android:text="@string/takepic"
            android:textColor="#55A5D6"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_gray" />

        <TextView
            android:id="@+id/bottom_pic_popmenu_tv_pickphoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="3"
            android:text="@string/pickpic"
            android:textColor="#55A5D6"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_gray" />

        <TextView
            android:id="@+id/bottom_pic_popmenu_tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="3"
            android:text="@string/cancle"
            android:textColor="#999999"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>