<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_orange"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <com.michu.huanxin.ui.CircleImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_circle_head"
            android:scaleType="centerCrop"
            android:src="@drawable/default_userhead" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_orange_circleborder_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_username" >
            </ImageView>

            <EditText
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/bg_orange"
                android:hint="@string/usernamehint"
                android:textColorHint="@color/grey2" 
                android:singleLine="true"
                android:textColor="@color/white" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_orange_circleborder_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_password" >
            </ImageView>

            <EditText
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/bg_orange"
                android:hint="@string/passwordhint"
                 android:textColorHint="@color/grey2" 
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:background="@drawable/btn_orange_selector"
            android:onClick="login"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetpsw"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="register"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:onClick="OnLoginQQ"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/qqlogin" />
    </LinearLayout>

</LinearLayout>